--- a/style.css
+++ b/style.css
@@ -4,15 +4,33 @@ body {
     padding: 0;
     background-color: #f4f4f4;
 }
+
 header {
     background-color: #333;
     color: #fff;
     padding: 1rem;
     text-align: center;
 }
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 1rem;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
 section {
     padding: 2rem;
 }
+
 footer {
     background-color: #333;
     color: #fff;
